syntax = "proto3";

package com.interview.forwarding;
option go_package="proto/forwarding";

import public "face.proto";

message DataForwarding{
    bytes image = 1;
    repeated Face faces = 2;
    int32 id =3;
    string prime = 4;
}

message DataForwardingStatus{
    int32 id = 1;
    string prime = 2;
    bool status = 3;
}
