syntax = "proto3";

package face;
option go_package="proto/face";

message Angle{
    float pitch = 1;
    float yaw = 2;
    float roll = 3;
}

message BBox {
    int64 x = 1;
    int64 y = 2;
    int64 w = 3;
    int64 h = 4;
}

message Keypoint{
    int64 x=1;
    int64 y=2;
}

message Face{
    BBox bbox = 1;
    bool hasHP = 2;
    int64 timestamp = 3;
    Angle pose = 4;
    repeated float embedding = 5;
    int64 track_id = 6; 
    string person_id=7;
    repeated Keypoint keypoints=8;
    float similarity = 9;
    string thumbnail = 10;
}